Add basic tls config
