# backend/apiserver/openapi-spec.yaml
@@ -4,7 +4,7 @@ info:
   description: trippify API
   version: 1.0.0
 servers:
-  - url: "http://localhost:80"
+  - url: "http://localhost:3000"
     description: "Local development server"
 
 paths:
@@ -187,7 +187,21 @@ components:
         spots:
           type: array
           items:
-            $ref: "#/components/schemas/ObjectId"
+            $ref: "#/components/schemas/TripSpot"
+
+    TripSpot:
+      type: object
+      required:
+        - spotId
+        - longitude
+        - latitude
+      properties:
+        spotId:
+          $ref: "#/components/schemas/ObjectId"
+        latitude:
+          type: number
+        longitude:
+          type: number
 
     NewSpot:
       type: object
@@ -200,9 +214,9 @@ components:
       properties:
         title:
           type: string
-        longitude:
-          type: number
         latitude:
+          type: number
+        longitude:
           type: number
         date_from:
           type: string
@@ -257,6 +271,7 @@ components:
       type: string
       enum:
         - server_error
+
     Timestamp:
       type: string
       format: iso8601
